--- a/lang/en.json
+++ b/lang/en.json
@@ -1,4 +1,8 @@
 {
     "title": "Regular Expressions - Regex",
-    "description": "Turn complex into simple: create, test and learn all about JavaScript regular expressions in one place"
+    "description": "Turn complex into simple: create, test and learn all about JavaScript regular expressions in one place",
+    "h1Index": "Simplified Regular Expressions",
+    "h2Description": "Create, learn and test JavaScript regular expressions faster and simpler",
+    "labelConsole": "Enter a regular expression",
+    "labelTest": "Try the regular expression"
 }
