--- a/lang/es.json
+++ b/lang/es.json
@@ -4,5 +4,6 @@
     "h1Index": "Expresiones regulares simplificadas",
     "h2Description": "Crea, aprende y prueba expresiones regulares de JavaScript más rápido y más simple",
     "labelConsole": "Ingresa una expresión regular",
-    "labelTest": "Prueba la expresión regular"
+    "labelTest": "Prueba la expresión regular",
+    "creator": "hecho por code-fw"
 }
