--- a/lang/en.json
+++ b/lang/en.json
@@ -5,5 +5,6 @@
     "h2Description": "Create, learn and test JavaScript regular expressions faster and simpler",
     "labelConsole": "Enter a regular expression",
     "labelTest": "Try the regular expression",
-    "creator": "made by code-fw"
+    "creator": "made by code-fw",
+    "linkToCollection": "Collection"
 }
