edit title of page and z-index of header

--- a/lang/es.json
+++ b/lang/es.json
@@ -1,6 +1,6 @@
 {
     "text": {
-        "title": "Expresiones regulares - Regex",
+        "title": "Regex - Expresiones regulares de JavaScript: crea, prueba & aprende",
         "description": "Convierte lo complejo en sencillo: crea, prueba y aprende todo sobre expresiones regulares de JavaScript en un solo lugar",
         "h1Index": "Expresiones regulares simplificadas",
         "labelConsole": "Ingresa una expresión regular",
