--- a/lang/en.json
+++ b/lang/en.json
@@ -1,6 +1,6 @@
 {
     "text": {
-        "title": "Regular Expressions - Regex",
+        "title": "Regex - JavaScript regular expressions: create, test & learn",
         "description": "Turn complex into simple: create, test and learn all about JavaScript regular expressions in one place",
         "h1Index": "Simplified Regular Expressions",
         "labelConsole": "Enter a regular expression",
